# gradgen

./: .gitignore  AUTH_IMPLEMENTATION_SUMMARY.md  BUSINESS_MODEL_PROGRESS.md  CLAUDE.md  COMPARISON_MODES.md  CREATE_ADMIN_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  EXAMPLE_PHOTOS_GUIDE.md  FIX_GOOGLE_OAUTH_ERROR.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  QUICK_ADMIN_SETUP.md  QUICK_FIX_BOTH_ISSUES.md  RAILWAY_DASHBOARD_MIGRATION.md  README_prompt_testing.txt  READY_TO_DEPLOY.md  RUN_MIGRATION_ON_RAILWAY.md  SETUP_GOOGLE_AND_EMAIL.md  database_migration.sql  generate_landing_examples.md  prompt_test_plan.csv  prompts.json  prompts_extended.json  pyproject.toml
webapp/backend/: .dockerignore  .env.example  .env.production.template  Dockerfile  Procfile  Procfile.worker  README.md  TEST_ACCOUNT_MANAGEMENT.md  add_unwatermarked_column.py  admin.py  create_admin.py  create_premium_admin.py  manage_test_accounts.py  migrate_business_model.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  railway_start.sh  reset_account.py  reset_admin.sql  reset_admin_account.py  run_migration.sh  run_migration_via_api.py  start.sh  start_with_migration.sh  toggle_tier.py  update_success_column.py
webapp/backend/app/: __init__.py  main.py
webapp/backend/app/api/: deps.py
webapp/backend/app/core/: config.py  prompts.py  security.py
webapp/backend/app/db/: migration_business_model.py  migrations.py
webapp/backend/app/models/: __init__.py  credit_transaction.py  email_verification.py  generated_image.py  generation_job.py  payment.py  promo_code.py  referral.py  user.py
webapp/backend/scripts/: create_user.py
(+200 files in other folders)
