[tool.poetry]
name = "gradgen-backend"
version = "0.1.0"
description = "FastAPI backend for GradGen graduation portrait generator"
authors = ["GradGen Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.17"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.0"
google-genai = "^1.0.0"
pillow = "^11.0.0"
stripe = "^11.1.0"
celery = "^5.4.0"
redis = "^5.2.0"
boto3 = "^1.35.62"
python-dotenv = "^1.0.1"
resend = "^2.19.0"
authlib = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
